# waybar_LAN

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  view_tooltip.sh
src/: main.rs
src/data/: collector.rs  mdns_discovery.rs  mod.rs  models.rs  proc_parsers.rs  ssdp_discovery.rs
src/display/: mod.rs  waybar.rs
src/domain/: mod.rs  types.rs
