[package]
name = "waybar_lan"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
network-interface = "2.0"
dns-lookup = "3.0"
mdns-sd = "0.17"
ssdp-client = "2.1"
tokio = { version = "1.0", features = ["rt", "time"] }
futures = "0.3"
